fix maven errors